--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                         Ainda tens 5 minutos e vontade de me conhecer mais um pouco?
                         Ouve-me!
                     </h2>
-                    <video class="mt-4" src="./images/InShot.mp4" controls></video>
+                    <iframe width="560" height="600" src="https://www.youtube.com/embed/cwiYpWMKGDo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
             </div>
         </div>
